@@ -26,17 +26,17 @@ set misc(IoAPath)       "../scripts/ioA/ioA.exe"
 
 #### AutoNuke Settings #####################################
 #
-# - User and group to use for auto-nuking (must be valid!).
-# - Nuke the whole release or only the violating sub-directory.
+# - User and group to use for auto-nuking (must be valid).
 #
 set anuke(UserName)     "ioFTPD"
 set anuke(GroupName)    "ioFTPD"
-set anuke(SubDirs)      False
 #
-# - Bad and missing file extension (created by the zipscript).
+# - Nuke the whole release or the violating sub-directory.
+# - Warnings for a release are announced once, regardless of how many times this
+#   script is run (i.e. an incomplete release will only be announced once).
 #
-set anuke(BadExt)       "*.bad"
-set anuke(MissingExt)   "*.missing"
+set anuke(SubDir)       False
+set anuke(WarnOnce)     False
 #
 # - Maximum age of directories to check (minutes).
 # - Exempt certain releases from being checked (case insensitive).
@@ -44,11 +44,11 @@ set anuke(MissingExt)   "*.missing"
 set anuke(MaximumAge)   1440
 set anuke(Exempts)      {\\[nuked\\]-* \\[incomplete\\]-* (incomplete)-* \\[filled\\]-* *dirfix* *dir[._]fix* *nfofix* *nfo[._]fix* *nfoupdate* *nfo[._]update* *samplefix* *sample[._]fix*}
 #
-# - Display the uploaders for auto-nuke warning announcements.
+# - Display the uploaders in auto-nuke warning announcements.
 # - Format of the uploaders list, cookies: %b = bold, %c = color,
 #   %u = underline,  %(user), and %(group).
 #
-set anuke(WarnUsers)    True
+set anuke(UserList)     True
 set anuke(UserFormat)   "%b%(user)%b/%(group)"
 set anuke(UserSplit)    ", "
 
@@ -67,6 +67,11 @@ set anuke(MP3Order)     {genre year}
 # - Shell style pattern matching (*, ?, []).
 #
 set anuke(ApproveTag)   {approved_by_*}
+#
+# - File extensions for "bad" and "missing" file markers (created by the zipscript).
+#
+set anuke(BadExt)       "*.bad"
+set anuke(MissingExt)   "*.missing"
 #
 # - Incomplete tag format, to detect incomplete releases.
 # - Shell style pattern matching (*, ?, []).
